tests/traci/set_variable/TrafficLight/errors/UnsupportedVariable/testclient.prog
simstep2 48
setvalue 0xc2 0xff dummy <string> dummy
simstep2 49
